修改 redis mode 实现为使用 redisson，暂时删除未使用的代理逻辑，添加 redis 初始化测试数据工具类

--- a/pom.xml
+++ b/pom.xml
@@ -34,9 +34,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-            <optional>true</optional>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.46.0</version>
         </dependency>
 
         <dependency>
